Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
0.7, 0.8, 0.9
-
Tested on Linux/Centos 6.0, with thrift_native.so installed
-
Patch Available
Description
Detected a failure when serializing, then deserializing a specific object
(I think the object needs to be large enough, AND probably must have non zero data at a specific offset)
$ /usr/bin/thrift --gen rb test.thrift && ruby test.rb
Caught Thrift::ProtocolException exception: Invalid value of field x1!
Trace:
./gen-rb/test_types.rb:34:in `validate'
test.rb:15:in `read'
test.rb:15