THRIFT-1632. rb: ruby: data corruption in thrift_native implementation of MemoryBufferTransport

This patch fixes a subtle bug whereby the read buffer was being resized but the method continued to read from the original, unresized buffer but at the wrong location.



git-svn-id: https://svn.apache.org/repos/asf/thrift/trunk@1355198 13f79535-47bb-0310-9956-ffa450edef68